# chatbot

./: .gitignore  .replit  ISYS30221ArtificialIntelligenceCourseworkSpecification202021.doc  README.md  api.py  chatbot.py  cnn.py  cocktail-chatbot.py  cocktail-chatbot.xml  cocktail-design.txt  cocktailQA.csv  constants.py  fuzzy.py  gui.py  kb.csv  kernel.py  knowledge.py  language.py  main.py  mybot-basic.py  pyproject.toml  requirements.txt  simularity.py  train-cnn.py  twitter-chatbot.py  twitter-keys  twitterlib.py
data/: cocktail-chatbot.xml  handwriting.eps  kb.csv  language-tests.txt
data/demo/: download (1).jfif  download (4).jfif
demo/: download (3).jfif  images.jfif
