[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sklearn = "^0.0"
python-aiml = "^0.9.3"
matplotlib = "^3.3.2"
tensorflow = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
